Aligned the category select and the name field together correctly in main/script.js

--- a/main/styles.css
+++ b/main/styles.css
@@ -158,6 +158,10 @@ fieldset {
     height: 32px;
 }
 
+#nameFieldCatSelectDiv select{
+    margin-top: 10px
+}
+
 #amountDateDiv {
     display: flex;
     justify-content: flex-start;
